i915-4.8-4.4 (4.8.5-2) UNRELEASED; urgency=medium

  * Add more reverts to silence i915 build warnings.
  * Makefile: Fix a typo preventing build of drm_dp_aux_dev.
  * intel_ips: Use i915_bpo calls like on the main xenial kernel.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 02 Nov 2016 14:35:01 +0200

i915-4.8-4.4 (4.8.5-1) xenial; urgency=medium

  * Update to v4.8.5 (no drm changes since v4.8)
  * revert-dma-buf-remove-range-based-flush.diff: Fix build warning.
  * Add radeon patches to fix issues with hybrid gfx.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 01 Nov 2016 12:30:35 +0200

i915-4.8-4.4 (4.8~rc5-1) xenial; urgency=medium

  * Update to v4.8-rc5.
  * conf: Use -j4, APL can handle it.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 06 Sep 2016 10:02:19 +0300

i915-4.8-4.4 (4.8~rc3-2) xenial; urgency=medium

  * modaliases: Replace with BXT/APL pciids.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Aug 2016 11:20:53 +0300

i915-4.8-4.4 (4.8~rc3-1) xenial; urgency=medium

  * Initial release for xenial.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Aug 2016 10:41:44 +0300