@@ -5,110 +5,8 @@ KBUILD      := $(KBASE)/build
 MOD_DIR     := $(KBASE)/kernel
 PWD         := $(shell pwd)
 
-I9_MODULES  := i915_bpo.o drm.o drm_kms_helper.o intel_ips.o
-
-CPATH       := $(KBUILD_EXTMOD)/drivers/gpu/drm/i915
-
 INC_INCPATH := $(KBUILD_EXTMOD)/include
 DRMD        := drivers/gpu/drm/
-
-# core driver code
-I915_ITEMS  := i915_drv \
-               i915_irq \
-               i915_params \
-               i915_pci \
-               i915_suspend \
-               i915_sysfs \
-               intel_csr \
-               intel_device_info \
-               intel_pm \
-               intel_runtime_pm
-
-# GEM code
-I915_ITEMS  += i915_cmd_parser \
-               i915_gem_batch_pool \
-               i915_gem_context \
-               i915_gem_debug \
-               i915_gem_dmabuf \
-               i915_gem_evict \
-               i915_gem_execbuffer \
-               i915_gem_fence \
-               i915_gem_gtt \
-               i915_gem \
-               i915_gem_render_state \
-               i915_gem_shrinker \
-               i915_gem_stolen \
-               i915_gem_tiling \
-               i915_gem_userptr \
-               i915_gpu_error \
-               i915_trace_points \
-	       intel_breadcrumbs \
-	       intel_lrc \
-               intel_mocs \
-               intel_ringbuffer \
-               intel_uncore
-
-# general-purpose microcontroller (GuC) support
-I915_ITEMS +=  intel_guc_loader \
-               i915_guc_submission
-
-# autogenerated null render state
-I915_ITEMS +=  intel_renderstate_gen6 \
-               intel_renderstate_gen7 \
-               intel_renderstate_gen8 \
-	       intel_renderstate_gen9
-
-# modesetting core code
-I915_ITEMS +=  intel_audio \
-               intel_atomic \
-               intel_atomic_plane \
-               intel_bios \
-               intel_color \
-               intel_display \
-               intel_dpio_phy \
-               intel_dpll_mgr \
-               intel_fbc \
-	       intel_fifo_underrun \
-	       intel_frontbuffer \
-               intel_hotplug \
-               intel_modes \
-               intel_overlay \
-	       intel_psr \
-               intel_sideband \
-               intel_sprite
-
-# modesetting output/encoder code
-I915_ITEMS +=  dvo_ch7017 \
-               dvo_ch7xxx \
-               dvo_ivch \
-               dvo_ns2501 \
-               dvo_sil164 \
-               dvo_tfp410 \
-               intel_crt \
-               intel_ddi \
-               intel_dp_aux_backlight \
-               intel_dp_link_training \
-	       intel_dp_mst \
-               intel_dp \
-               intel_dsi \
-               intel_dsi_dcs_backlight \
-               intel_dsi_panel_vbt \
-               intel_dsi_pll \
-               intel_dvo \
-               intel_hdmi \
-               intel_i2c \
-               intel_lvds \
-               intel_panel \
-               intel_sdvo \
-               intel_tv
-
-# virtual gpu code
-I915_ITEMS +=  i915_vgpu
-
-ifeq ($(CONFIG_DRM_I915_GVT),y)
-I915_ITEMS += intel_gvt
-include $(src)/gvt/Makefile
-endif
 
 # keep sorted like they are to allow easier comparison to drm/Makefile
 DRM_ITEMS   := drm_auth drm_bufs drm_cache \
@@ -128,12 +26,6 @@ DRM_KMS_HELPER_ITEMS := drm_crtc_helper drm_dp_helper drm_probe_helper \
                 drm_plane_helper drm_dp_mst_topology drm_atomic_helper \
                 drm_kms_helper_common drm_dp_dual_mode_helper \
                 drm_simple_kms_helper drm_blend
-
-# this prioritises the DKMS package include directories over the kernel headers
-# allowing us to override header files where the 3.12.x versions have extra
-# structs and declarations and so forth that we need for the backport to build
-
-export CPATH
 
 .PHONY: default clean modules load unload install patch
 
@@ -155,13 +47,7 @@ drm_kms_helper-y                                += \
     $(patsubst %,$(DRMD)%.o,drm_dp_aux_dev)
 
 drm-y       := $(patsubst %,$(DRMD)%.o,      $(DRM_ITEMS))
-i915_bpo-y      := $(patsubst %,$(DRMD)i915/%.o, $(I915_ITEMS))
 intel_ips-y := $(patsubst %,drivers/platform/x86/%.o,intel_ips)
-
-i915_bpo-$(CONFIG_COMPAT)            += $(patsubst %,$(DRMD)i915/%.o,i915_ioc32)
-i915_bpo-$(CONFIG_DEBUG_FS)          += $(patsubst %,$(DRMD)i915/%.o,i915_debugfs)
-i915_bpo-$(CONFIG_ACPI)              += $(patsubst %,$(DRMD)i915/%.o,intel_acpi intel_opregion)
-i915_bpo-$(CONFIG_DRM_FBDEV_EMULATION) += $(patsubst %,$(DRMD)i915/%.o,intel_fbdev)
 
 drm-$(CONFIG_COMPAT)             += $(patsubst %,$(DRMD)%.o,drm_ioc32)
 drm-$(CONFIG_DRM_GEM_CMA_HELPER) += $(patsubst %,$(DRMD)%.o,drm_gem_cma_helper)
@@ -170,18 +56,19 @@ drm-y                            += $(patsubst %,$(DRMD)%.o,drm_panel)
 drm-$(CONFIG_OF)                 += $(patsubst %,$(DRMD)%.o,drm_of)
 drm-$(CONFIG_AGP)                += $(patsubst %,$(DRMD)%.o,drm_agpsupport)
 
-obj-$(CONFIG_DRM_I915)           += i915_bpo.o
 obj-$(CONFIG_INTEL_IPS)          += intel_ips.o
 obj-$(CONFIG_DRM)                += drm.o
 obj-$(CONFIG_DRM_KMS_HELPER)     += drm_kms_helper.o
 
-obj-m := $(I9_MODULES)
+BUILD_MODULES  := drm.o drm_kms_helper.o intel_ips.o
+
+obj-m := $(BUILD_MODULES)
+obj-m += drivers/gpu/drm/i915/
 obj-m += drivers/gpu/drm/radeon/
 
-CFLAGS_i915_trace_points.o := -I$(CPATH)
 CFLAGS_drm_trace_points.o  := -I$(KBUILD_EXTMOD)/drivers/gpu/drm
 
-modules: $(KBUILD) $(patsubst %.o,%.c,$(I9_MODULES))
+modules: $(KBUILD) $(patsubst %.o,%.c,$(BUILD_MODULES))
 	$(MAKE) -C $(KBUILD) M=$(PWD) O=$(KBUILD) modules
 
 clean:
