@@ -8,6 +8,7 @@ BUILT_MODULE_NAME[1]="intel_ips"
 BUILT_MODULE_NAME[2]="drm"
 BUILT_MODULE_NAME[3]="drm_kms_helper"
 BUILT_MODULE_NAME[4]="radeon"
+BUILT_MODULE_LOCATION[0]="drivers/gpu/drm/i915"
 BUILT_MODULE_LOCATION[4]="drivers/gpu/drm/radeon"
 DEST_MODULE_LOCATION[0]=/updates
 DEST_MODULE_LOCATION[1]=/updates
